pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgrayb.pc

SUBDIRS = src test clm

sconfdir = $(pkgdatadir)/conf
#dist_sconf_DATA = \
#	     etc/objspec.dtd

modulesdir = $(pkgdatadir)/modules
dist_modules_DATA = \
	     modules/syst.xml \
	     modules/syst.chs \
	     modules/capsula.xml \
	     modules/capsula.chs \
	     modules/data.xml \
	     modules/data.chs \
	     modules/func.xml \
	     modules/func.chs \
	     modules/des.xml \
	     modules/des.chs \
	     modules/adp.chs \
	     modules/vis.xml 


EXTRA_DIST = \
	     modules/des.chs \
	     modules/adp.chs

