includedir = @includedir@/fap3

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0 -pthread

lib_LTLIBRARIES = libfap3.la

libfap3_la_SOURCES = \
		       miface.h \
		       menv.h \
		       mnode.h \
		       mplugin.h \
		       mprov.h \
		       mowning.h \
		       nconn.h \
		       necont.h \
		       menv.h \
		       mlog.h \
		       munit.h \
		       mdata.h \
		       ifu.h \
		       ifu.cpp \
		       env.h \
		       env.cpp \
		       curi.h \
		       curi.cpp \
		       guri.h \
		       guri.cpp \
		       log.h \
		       log.cpp \
		       ifr.h \
		       ifr.cpp \
		       prov.h \
		       prov.cpp \
		       provdef.h \
		       provdef.cpp \
		       factr.h \
		       factr.cpp \
		       cont.h \
		       cont.cpp \
		       cont2.h \
		       cont2.cpp \
		       node.h \
		       node.cpp \
		       content.h \
		       content.cpp \
		       elem.h \
		       elem.cpp \
		       vert.h \
		       vert.cpp \
		       syst.h \
		       syst.cpp \
		       rdata.h \
		       rdata.cpp \
		       data.h \
		       data.cpp \
		       func.h \
		       func.cpp \
		       des.h \
		       des.cpp \
		       dest.h \
		       dest.cpp \
		       chromo.h \
		       chromo.cpp \
		       chromo2.h \
		       chromo2.cpp \
		       unit.h \
		       unit.cpp

include_HEADERS = \
		  menv.h \
		  mplugin.h \
		  mlog.h \
		  mprov.h \
		  mecont.h \
		  mnode.h \
		  melem.h \
		  mdata.h \
		  mdes.h \
		  mlauncher.h \
		  miface.h


libfap3_la_LDFLAGS = -rdynamic -no-undefined -lrt
