includedir = @includedir@/fap3

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0 -pthread

lib_LTLIBRARIES = libfap3.la

libfap3_la_SOURCES = \
		       miface.h \
		       menv.h \
		       mnode.h \
		       mplugin.h \
		       mprov.h \
		       mowning.h \
		       minh.h \
		       mlink.h \
		       nconn.h \
		       necont.h \
		       menv.h \
		       mmntp.h \
		       mlog.h \
		       munit.h \
		       mdata.h \
		       ifu.h \
		       ifu.cpp \
		       env.h \
		       env.cpp \
		       curi.h \
		       curi.cpp \
		       guri.h \
		       guri.cpp \
		       log.h \
		       log.cpp \
		       ifr.h \
		       ifr.cpp \
		       prov.h \
		       prov.cpp \
		       provdef.h \
		       provdef.cpp \
		       factr.h \
		       factr.cpp \
		       cont.h \
		       cont.cpp \
		       cont2.h \
		       cont2.cpp \
		       node.h \
		       node.cpp \
		       content.h \
		       content.cpp \
		       elem.h \
		       elem.cpp \
		       vert.h \
		       vert.cpp \
		       link.h \
		       link.cpp \
		       syst.h \
		       syst.cpp \
		       rdata.h \
		       rdata.cpp \
		       rdatauri.h \
		       rdatauri.cpp \
		       rmutdata.h \
		       rmutdata.cpp \
		       data.h \
		       data.cpp \
		       func.h \
		       func.cpp \
		       des.h \
		       des.cpp \
		       dest.h \
		       dest.cpp \
		       desio.h \
		       desio.cpp \
		       chromo.h \
		       chromo.h \
		       chromo.cpp \
		       chromo2.h \
		       chromo2.cpp \
		       desadp.h \
		       desadp.cpp \
		       dessdc.h \
		       dessdc.cpp \
		       mnt.h \
		       mnt.cpp \
		       dbg.h \
		       dbg.cpp \
		       unit.h \
		       unit.cpp

include_HEADERS = \
		  menv.h \
		  mplugin.h \
		  mlog.h \
		  mprov.h \
		  mecont.h \
		  mnode.h \
		  munit.h \
		  melem.h \
		  mvert.h \
		  msyst.h \
		  mdes.h \
		  minh.h \
		  mdata.h \
		  mlauncher.h \
		  mifr.h \
		  mmntp.h \
		  mcontent.h \
		  mowning.h \
		  mchromo.h \
		  mobserv.h \
		  nconn.h \
		  mlink.h \
		  rdata.h \
		  node.h \
		  unit.h \
		  elem.h \
		  vert.h \
		  syst.h \
		  des.h \
		  ifu.h \
		  ifr.h \
		  guri.h \
		  curi.h \
		  chromo.h \
		  content.h \
		  prov.h \
		  chromo2.h \
		  env.h \
		  factr.h \
		  desadp.h \
		  dbg.h \
		  miface.h


libfap3_la_LDFLAGS = -rdynamic -no-undefined -lrt -ldl
